--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="go.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>YA-GO</title>
+    <title>YA-GO разработка и продвижение сайтов </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
